# securepass

./: .gitignore  PROJECT_STRUCTURE.md  README.md  pyproject.toml  refresh_package.py  requirements.txt  run_tests.py  script.txt  setup.cfg  setup.py
password_generator/: __init__.py  cli.py  generator.py
password_generator/clipboard/: __init__.py  copyq.py  pbcopy.py  powershell.py  pyperclip.py  wlclip.py  xclip.py
password_generator/utils/: __init__.py  commands.py  vprint.py
securepass/: __init__.py  __main__.py  cli.py  compatibility.py  generator.py
securepass/clipboard/: __init__.py  copyq.py  pbcopy.py  powershell.py  pyperclip.py  wlclip.py  xclip.py
securepass/utils/: commands.py  vprint.py
tests/: __init__.py  conftest.py  test-clipboard-powerq.py  test-clipboard-wlclip.py  test_cli.py  test_clipboard.py  test_clipboard_platforms.py  test_compatibility.py  test_generator.py  test_init.py  test_main.py  test_utils.py
