[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strong-password-generator"
version = "1.0.0"
description = "A secure password generator with clipboard support"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Kenzy Codex 💙", email = "kenzycodex@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "mypy"]

[project.scripts]
passgen = "password_generator.cli:main"